Revert "WICKET-7135 Work on deprecation warnings (#1049)"
This reverts commit da01909263cc6b48d7e082ac2fc4bcd0dda75e8a.