@@ -17,8 +17,6 @@
 package org.apache.wicket.markup.html.include;
 
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
 
@@ -189,9 +187,9 @@ public class Include extends WebComponent implements IGenericComponent<String, I
 	{
 		try
 		{
-			return importUrl(new URI(url.toString()).toURL());
+			return importUrl(new URL(url.toString()));
 		}
-		catch (URISyntaxException | MalformedURLException e)
+		catch (MalformedURLException e)
 		{
 			throw new WicketRuntimeException(e);
 		}
